Make Invitation Bar available in mobile UI

The accept/decline functionality seems to be broken in master
right now though, have to cross-check with other developers...

BUG: 258700